# rust-crud-example

./: .env  Cargo.toml  Dockerfile
.circleci/: config.yml
kubernetes/: deployment.yml  migrator.yml  service.yml
migrations/20170809190545_create_baskets/: down.sql  up.sql
src/: api.rs  lib.rs  main.rs  routes.rs  schema.rs
src/database/: interface.rs  middleware.rs  mod.rs  postgres.rs
src/macros/: json.rs  mod.rs
tests/: simple.rs
