[package]
name = "checkout"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]

[dependencies]
iron = "0.5.1"
diesel = { version = "0.15.2", features = ["postgres", "uuid", "serde_json"] }
diesel_codegen = { version = "0.15.0", features = ["postgres"] }
dotenv = "0.9.0"
router = "*"
uuid = { version = "0.5.1", features = ["v4"] }
r2d2 = "0.7.3"
r2d2-diesel = "0.15.0"
serde_json = "1.0.2"
serde = "1.0.11"
serde_derive = "1.0.11"
logger = "0.3.0"
env_logger = "0.4.3"
pretty_env_logger = "0.1.1"

[replace]
"diesel:0.15.2" = { git = "https://github.com/diesel-rs/diesel" }
